# internal/pkg/notes/delivery/http/notes_delivery.go
@@ -5,6 +5,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/go-park-mail-ru/2023_1_Technokaif/pkg/logger"
 	"github.com/gofrs/uuid/v5"
+	"github.com/yarikTri/archipelago-notes-api/internal/common/http/auth"
 	"github.com/yarikTri/archipelago-notes-api/internal/models"
 	"github.com/yarikTri/archipelago-notes-api/internal/pkg/notes"
 	"net/http"
@@ -22,12 +23,38 @@ func NewHandler(nu notes.Usecase, l logger.Logger) *Handler {
 	}
 }
 
+func (h *Handler) checkAccess(c *gin.Context, noteID uuid.UUID, method methodName) *models.NoteAccess {
+	userID, err := auth.GetUserId(c)
+	if err != nil {
+		h.logger.Infof("Unathorized request for note %s, method %s", noteID.String(), method)
+		c.JSON(http.StatusUnauthorized, "")
+		return nil
+	}
+
+	access, err := h.notesUsecase.GetUserAccess(noteID, userID)
+	if err != nil {
+		h.logger.Errorf("Error while check access for user with id %s: %w", userID.String(), err)
+		c.JSON(http.StatusInternalServerError, "Can't check access")
+		return nil
+	}
+
+	for _, a := range methodsAccessMap[method] {
+		if a == access {
+			return &access
+		}
+	}
+
+	h.logger.Infof("Access forbidden for user %s, note %s, method %s", userID.String(), noteID.String(), method)
+	c.JSON(http.StatusForbidden, "")
+	return nil
+}
+
 // Get
 // @Summary		Get note
 // @Tags		Notes
 // @Description	Get note by ID
 // @Produce     json
-// @Param		noteID path int true 							"Note ID"
+// @Param		noteID path string true 						"Note ID"
 // @Success		200			{object}	models.NoteTransfer		"Note"
 // @Failure		400			{object}	error					"Incorrect input"
 // @Failure		500			{object}	error					"Server error"
@@ -40,6 +67,11 @@ func (h *Handler) Get(c *gin.Context) {
 		return
 	}
 
+	access := h.checkAccess(c, id, getMethodName)
+	if access == nil {
+		return
+	}
+
 	note, err := h.notesUsecase.GetByID(id)
 	if err != nil {
 		h.logger.Errorf("Error while getting note with id %d: %w", id, err)
@@ -47,20 +79,28 @@ func (h *Handler) Get(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, note.ToTransfer())
+	c.JSON(http.StatusOK, note.ToTransfer(getAllowedMethods(*access)))
 }
 
 // List
 // @Summary		List notes
 // @Tags		Notes
-// @Description	Get all notes
+// @Description	Get all notes user has access to
+// @Accept 		json
 // @Produce     json
 // @Success		200			{object}	ListNotesResponse	"Notes"
 // @Failure		400			{object}	error				"Incorrect input"
 // @Failure		500			{object}	error				"Server error"
 // @Router		/api/notes [get]
 func (h *Handler) List(c *gin.Context) {
-	notes, err := h.notesUsecase.List()
+	userID, err := auth.GetUserId(c)
+	if err != nil {
+		h.logger.Infof("Unathorized request for listing notes")
+		c.JSON(http.StatusUnauthorized, "")
+		return
+	}
+
+	notes, err := h.notesUsecase.List(userID)
 	if err != nil {
 		h.logger.Errorf("Error while listing notes: %w", err)
 		c.JSON(http.StatusInternalServerError, err)
@@ -69,7 +109,8 @@ func (h *Handler) List(c *gin.Context) {
 
 	notesTransfers := make([]*models.NoteTransfer, 0)
 	for _, note := range notes {
-		notesTransfers = append(notesTransfers, note.ToTransfer())
+		access := models.NoteAccessFromString(*note.Access)
+		notesTransfers = append(notesTransfers, note.ToTransfer(getAllowedMethods(access)))
 	}
 
 	c.JSON(http.StatusOK, ListNotesResponse{notesTransfers})
@@ -87,6 +128,13 @@ func (h *Handler) List(c *gin.Context) {
 // @Failure		500			{object}	error							"Server error"
 // @Router		/api/notes [post]
 func (h *Handler) Create(c *gin.Context) {
+	userID, err := auth.GetUserId(c)
+	if err != nil {
+		h.logger.Infof("Unathorized request for listing notes")
+		c.JSON(http.StatusUnauthorized, "")
+		return
+	}
+
 	var req CreateNoteRequest
 	c.BindJSON(&req)
 
@@ -96,14 +144,14 @@ func (h *Handler) Create(c *gin.Context) {
 		return
 	}
 
-	createdNote, err := h.notesUsecase.Create(req.DirID, req.AutomergeURL, req.Title)
+	createdNote, err := h.notesUsecase.Create(req.DirID, req.AutomergeURL, req.Title, userID)
 	if err != nil {
 		h.logger.Errorf("Error: %w", err)
 		c.JSON(http.StatusInternalServerError, err)
 		return
 	}
 
-	c.JSON(http.StatusOK, createdNote.ToTransfer())
+	c.JSON(http.StatusOK, createdNote.ToTransfer(getAllowedMethods(models.ManageAccessNoteAccess)))
 }
 
 // Update
@@ -112,7 +160,7 @@ func (h *Handler) Create(c *gin.Context) {
 // @Description	Update note by ID
 // @Accept		json
 // @Produce     json
-// @Param		noteID path int true 							"Note ID"
+// @Param		noteID path string true 						"Note ID"
 // @Param		noteInfo	body		UpdateNoteRequest		true	"Note info"
 // @Success		200			{object}	models.NoteTransfer		"Updated note"
 // @Failure		400			{object}	error					"Incorrect input"
@@ -123,6 +171,11 @@ func (h *Handler) Update(c *gin.Context) {
 	if err != nil {
 		h.logger.Infof("Invalid note id '%s'", c.Param("id"))
 		c.JSON(http.StatusBadRequest, err)
+		return
+	}
+
+	access := h.checkAccess(c, id, updateMethodName)
+	if access == nil {
 		return
 	}
 
@@ -151,7 +204,7 @@ func (h *Handler) Update(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, updatedNote.ToTransfer())
+	c.JSON(http.StatusOK, updatedNote.ToTransfer(getAllowedMethods(*access)))
 }
 
 // Delete
@@ -159,7 +212,7 @@ func (h *Handler) Update(c *gin.Context) {
 // @Tags		Notes
 // @Description	Delete note by ID
 // @Produce     json
-// @Param		noteID path int true 			"Note ID"
+// @Param		noteID path string true 		"Note ID"
 // @Success		200								"Note deleted"
 // @Failure		400			{object}	error	"Incorrect input"
 // @Failure		500			{object}	error	"Server error"
@@ -173,6 +226,55 @@ func (h *Handler) Delete(c *gin.Context) {
 	}
 
 	if err := h.notesUsecase.DeleteByID(id); err != nil {
+		h.logger.Errorf("Error: %w", err)
+		c.JSON(http.StatusInternalServerError, err)
+		return
+	}
+
+	c.Status(http.StatusOK)
+}
+
+// SetAccess
+// @Summary		Set Access
+// @Tags		Notes
+// @Description	Set access to note to user
+// @Accept		json
+// @Produce     json
+// @Param		noteID path string true 				"Note ID"
+// @Param		userID path string true 				"User to set access ID"
+// @Param		access	body	SetAccessRequest true	"Note info"
+// @Success		200										"Note deleted"
+// @Failure		400			{object}	error			"Incorrect input"
+// @Failure		500			{object}	error			"Server error"
+// @Router		/api/notes/{noteID}/access/{userID} [post]
+func (h *Handler) SetAccess(c *gin.Context) {
+	id, err := uuid.FromString(c.Param("id"))
+	if err != nil {
+		h.logger.Infof("Invalid note id '%s'", c.Param("id"))
+		c.JSON(http.StatusBadRequest, err)
+		return
+	}
+
+	if access := h.checkAccess(c, id, setAccessMethodName); access == nil {
+		return
+	}
+
+	userID, err := uuid.FromString(c.Param("userID"))
+	if err != nil {
+		h.logger.Infof("Invalid note id '%s'", c.Param("id"))
+		c.JSON(http.StatusBadRequest, err)
+		return
+	}
+
+	var req SetAccessRequest
+	c.BindJSON(&req)
+	if err := req.validate(); err != nil {
+		h.logger.Infof("Invalid set access request: %w", err)
+		c.JSON(http.StatusBadRequest, err)
+		return
+	}
+
+	if err := h.notesUsecase.SetUserAccess(id, userID, models.NoteAccessFromString(req.Access), req.WithInvitation); err != nil {
 		h.logger.Errorf("Error: %w", err)
 		c.JSON(http.StatusInternalServerError, err)
 		return
