# internal/pkg/users/delivery/http/users_delivery_models.go
@@ -1,0 +1,7 @@
+package http
+
+import "github.com/yarikTri/archipelago-notes-api/internal/models"
+
+type SearchUsersResponse struct {
+	Users []*models.UserTransfer `json:"users"`
+}
